--- a/01-js.html
+++ b/01-js.html
@@ -17,7 +17,21 @@
     ></script>
     <script type="text/javascript">
       const rootElement = document.getElementById("root");
+      //const element = document.createElement("div");
+      //element.textContent = "Hello world";
+      //element.className = "container";
+      //rootElement.appendChild(element);
 
+      // the react way
+
+      const element = React.createElement(
+        "div",
+        { className: "container", children: ["Hello world", "GoodBye world!"] }
+        //"Hello World!",
+        //"Goodbye World!"
+      );
+
+      console.log(element);
       ReactDOM.render(element, rootElement);
     </script>
   </body>
