--- a/02-jsx.html
+++ b/02-jsx.html
@@ -15,9 +15,15 @@
       src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"
       crossorigin
     ></script>
-    <script type="text/javascript">
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <script type="text/babel">
       const rootElement = document.getElementById("root");
+      // const element = React.createElement("div", {
+      //   className: "container",
+      //   children: "Hello World"
+      // });
 
+      const element = <div className="container">Hello World!!</div>;
       ReactDOM.render(element, rootElement);
     </script>
   </body>
